engine/tests/fixtures/invalid/widget/missing-event-shape.tg
widget widget_missing_event_shape {
  name "Missing Event Shape"
  description "Invalid widget fixture"
  props {
    rows array required
  }
  events {
    row_select shape_missing
  }
  status active
}
